src/types/tests/snapshots/tgbot__types__tests__game__game-2.snap
---
source: src/types/tests/game.rs
expression: "Game::new(\"Description\", [], \"Game\")"
---
{
  "description": "Description",
  "photo": [],
  "title": "Game"
}
