src/types/tests/snapshots/tgbot__types__tests__game__game_high_score.snap
---
source: src/types/tests/game.rs
expression: "GameHighScore::new(1, 3, User::new(2, \"John\", false))"
---
{
  "position": 1,
  "score": 3,
  "user": {
    "first_name": "John",
    "id": 2,
    "is_bot": false
  }
}
