src/types/tests/snapshots/tgbot__types__tests__game__get_game_high_scores-2.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "inline_message_id": "inline-message-id",
  "user_id": 1
}
