src/types/tests/snapshots/tgbot__types__tests__game__get_game_high_scores.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "chat_id": 2,
  "message_id": 3,
  "user_id": 1
}
