src/types/tests/snapshots/tgbot__types__tests__game__send_game.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "chat_id": 1,
  "game_short_name": "Game"
}
