src/types/tests/snapshots/tgbot__types__tests__game__set_game_score-2.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "chat_id": 1,
  "disable_edit_message": true,
  "force": true,
  "message_id": 2,
  "score": 100,
  "user_id": 3
}
