src/types/tests/snapshots/tgbot__types__tests__game__set_game_score-3.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "inline_message_id": "inline-message-id",
  "score": 100,
  "user_id": 3
}
