src/types/tests/snapshots/tgbot__types__tests__game__set_game_score-4.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "disable_edit_message": true,
  "force": true,
  "inline_message_id": "inline-message-id",
  "score": 100,
  "user_id": 3
}
