src/types/tests/snapshots/tgbot__types__tests__game__set_game_score.snap
---
source: src/types/tests/game.rs
expression: actual_data
---
{
  "chat_id": 1,
  "message_id": 2,
  "score": 100,
  "user_id": 3
}
